[package]
name = "curl_smile"
version = "0.0.5"
edition = "2024"
license = "MIT"
description = "A simplified rust API for Keepsmile lights"
repository = "https://github.com/lpurgitoryl/curl_smile"
keywords = ["bluetooth, lights, api, btle, ble"]
categories = ["command-line-utilities", "embedded", "development-tools"]

[dependencies]
btleplug = "0.11.8"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
uuid = "1.20.0"
